--- a/index.html
+++ b/index.html
@@ -35,7 +35,153 @@
         <li><a>消息</a></li>
         <li><a>我</a></li>
       </ul>
+      <div class="news">
+        <span class="">最新动态</span>
+        <span class="setting">设置</span>
+      </div>
     </nav>
+
+
+    <div class="article">
+      <ul>
+        <li>
+          <div class="header">
+            <span class="name">潘安</span>
+            <time>10分钟之前</time>
+            <img src=""> 
+          </div>
+          
+          <h2 class="title"><a class="">月薪两万的人把钱花哪里了</a>
+          </h2>
+          
+          <div class="makedown">
+            月薪两万的人把钱花哪里了
+            <a class="#">显示全部</a>
+          </div>
+          <div class="footer">
+            <span>关注问题</span>
+            <span>评论</span>
+            <span>感谢</span>
+            <span>禁止装载</span>
+             </div>
+        </li>
+
+        <li>
+          <div class="header">
+            <span class="name">潘安</span>
+            <time>10分钟之前</time>
+            <img src=""> 
+          </div>
+          <div class="title">月薪两万的人把钱花哪里了</div>
+          <div class="makedown">
+            月薪两万的人把钱花哪里了
+            <a class="#">显示全部</a>
+          </div>
+          <div class="footer">
+            <span>关注问题</span>
+            <span>评论</span>
+            <span>感谢</span>
+            <span>禁止装载</span>
+             </div>
+        </li>
+
+        <li>
+          <div class="header">
+            <span class="name">潘安</span>
+            <time>10分钟之前</time>
+            <img src=""> 
+          </div>
+          <div class="title">月薪两万的人把钱花哪里了</div>
+          <div class="makedown">
+            月薪两万的人把钱花哪里了
+            <a class="#">显示全部</a>
+          </div>
+          <div class="footer">
+            <span>关注问题</span>
+            <span>评论</span>
+            <span>感谢</span>
+            <span>禁止装载</span>
+             </div>
+        </li>
+
+        <li>
+          <div class="header">
+            <span class="name">潘安</span>
+            <time>10分钟之前</time>
+            <img src=""> 
+          </div>
+          <div class="title">月薪两万的人把钱花哪里了</div>
+          <div class="makedown">
+            月薪两万的人把钱花哪里了
+            <a class="#">显示全部</a>
+          </div>
+          <div class="footer">
+            <span>关注问题</span>
+            <span>评论</span>
+            <span>感谢</span>
+            <span>禁止装载</span>
+             </div>
+        </li>
+
+        <li>
+          <div class="header">
+            <span class="name">潘安</span>
+            <time>10分钟之前</time>
+            <img src=""> 
+          </div>
+          <div class="title">月薪两万的人把钱花哪里了</div>
+          <div class="makedown">
+            月薪两万的人把钱花哪里了
+            <a class="#">显示全部</a>
+          </div>
+          <div class="footer">
+            <span>关注问题</span>
+            <span>评论</span>
+            <span>感谢</span>
+            <span>禁止装载</span>
+             </div>
+        </li>
+
+        <li>
+          <div class="header">
+            <span class="name">潘安</span>
+            <time>10分钟之前</time>
+            <img src=""> 
+          </div>
+          <div class="title">月薪两万的人把钱花哪里了</div>
+          <div class="makedown">
+            月薪两万的人把钱花哪里了
+            <a class="#">显示全部</a>
+          </div>
+          <div class="footer">
+            <span>关注问题</span>
+            <span>评论</span>
+            <span>感谢</span>
+            <span>禁止装载</span>
+             </div>
+        </li>
+
+        <li>
+          <div class="header">
+            <span class="name">潘安</span>
+            <time>10分钟之前</time>
+            <img src=""> 
+          </div>
+          <div class="title">月薪两万的人把钱花哪里了</div>
+          <div class="makedown">
+            月薪两万的人把钱花哪里了
+            <a class="#">显示全部</a>
+          </div>
+          <div class="footer">
+            <span>关注问题</span>
+            <span>评论</span>
+            <span>感谢</span>
+            <span>禁止装载</span>
+             </div>
+        </li>
+      </ul>
+    </div>
+
   </div>
 </body>
 </html>
