--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <title>mobile-cnode</title>
 
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
   <meta name="format-detection" content="telephone=no" />
@@ -183,5 +182,7 @@
     </div>
 
   </div>
+  <script type="text/javascript" src="./js/jquery-3.1.0.min.js"></script>
+  <script type="text/javascript" src="./js/index.js"></script>>
 </body>
 </html>
