--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <nav>
       <ul>
         <li><a>首页</a></li>
-        <li><a>话题</a></li>
-        <li><a>发现</a></li>
-        <li><a>消息</a></li>
-        <li><a>我</a></li>
+        <li><a>精华</a></li>
+        <li><a>分享</a></li>
+        <li><a>问答</a></li>
+        <li><a>招聘</a></li>
       </ul>
       <div class="news">
         <span class="">最新动态</span>
@@ -50,126 +50,11 @@
             <img src=""> 
           </div>
           
-          <h2 class="title"><a class="">月薪两万的人把钱花哪里了</a>
-          </h2>
+          <h2 class="title"><a class="">月薪两万的人把钱花哪里了</a></h2>
           
           <div class="makedown">
             月薪两万的人把钱花哪里了
-            <a class="#">显示全部</a>
-          </div>
-          <div class="footer">
-            <span>关注问题</span>
-            <span>评论</span>
-            <span>感谢</span>
-            <span>禁止装载</span>
-             </div>
-        </li>
-
-        <li>
-          <div class="header">
-            <span class="name">潘安</span>
-            <time>10分钟之前</time>
-            <img src=""> 
-          </div>
-          <div class="title">月薪两万的人把钱花哪里了</div>
-          <div class="makedown">
-            月薪两万的人把钱花哪里了
-            <a class="#">显示全部</a>
-          </div>
-          <div class="footer">
-            <span>关注问题</span>
-            <span>评论</span>
-            <span>感谢</span>
-            <span>禁止装载</span>
-             </div>
-        </li>
-
-        <li>
-          <div class="header">
-            <span class="name">潘安</span>
-            <time>10分钟之前</time>
-            <img src=""> 
-          </div>
-          <div class="title">月薪两万的人把钱花哪里了</div>
-          <div class="makedown">
-            月薪两万的人把钱花哪里了
-            <a class="#">显示全部</a>
-          </div>
-          <div class="footer">
-            <span>关注问题</span>
-            <span>评论</span>
-            <span>感谢</span>
-            <span>禁止装载</span>
-             </div>
-        </li>
-
-        <li>
-          <div class="header">
-            <span class="name">潘安</span>
-            <time>10分钟之前</time>
-            <img src=""> 
-          </div>
-          <div class="title">月薪两万的人把钱花哪里了</div>
-          <div class="makedown">
-            月薪两万的人把钱花哪里了
-            <a class="#">显示全部</a>
-          </div>
-          <div class="footer">
-            <span>关注问题</span>
-            <span>评论</span>
-            <span>感谢</span>
-            <span>禁止装载</span>
-             </div>
-        </li>
-
-        <li>
-          <div class="header">
-            <span class="name">潘安</span>
-            <time>10分钟之前</time>
-            <img src=""> 
-          </div>
-          <div class="title">月薪两万的人把钱花哪里了</div>
-          <div class="makedown">
-            月薪两万的人把钱花哪里了
-            <a class="#">显示全部</a>
-          </div>
-          <div class="footer">
-            <span>关注问题</span>
-            <span>评论</span>
-            <span>感谢</span>
-            <span>禁止装载</span>
-             </div>
-        </li>
-
-        <li>
-          <div class="header">
-            <span class="name">潘安</span>
-            <time>10分钟之前</time>
-            <img src=""> 
-          </div>
-          <div class="title">月薪两万的人把钱花哪里了</div>
-          <div class="makedown">
-            月薪两万的人把钱花哪里了
-            <a class="#">显示全部</a>
-          </div>
-          <div class="footer">
-            <span>关注问题</span>
-            <span>评论</span>
-            <span>感谢</span>
-            <span>禁止装载</span>
-             </div>
-        </li>
-
-        <li>
-          <div class="header">
-            <span class="name">潘安</span>
-            <time>10分钟之前</time>
-            <img src=""> 
-          </div>
-          <div class="title">月薪两万的人把钱花哪里了</div>
-          <div class="makedown">
-            月薪两万的人把钱花哪里了
-            <a class="#">显示全部</a>
+            <a class="showup">显示全部</a>
           </div>
           <div class="footer">
             <span>关注问题</span>
