--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
         <li><a>问答</a></li>
         <li><a>招聘</a></li>
       </ul>
-      <div class="news">
-        <span class="">最新动态</span>
-        <span class="setting">设置</span>
+      <div class="wrap">
+        <div class="news">
+         <span class="newstates">最新动态</span>
+         <span class="setting">设置</span>
+        </div>
       </div>
     </nav>
 
@@ -60,7 +62,7 @@
             <span>关注问题</span>
             <span>评论</span>
             <span>感谢</span>
-            <span>禁止装载</span>
+            <span>禁止转载</span>
              </div>
         </li>
       </ul>
