--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="header">
             <span class="name">潘安</span>
             <time>10分钟之前</time>
-            <img src=""> 
+            <img class="" src=""> 
           </div>
           
           <h2 class="title"><a class="">月薪两万的人把钱花哪里了</a></h2>
