--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="article">
       <ul>
-        <li>
+        <li class="article-li">
           <div class="header">
             <span class="name">潘安</span>
             <time>10分钟之前</time>
@@ -55,6 +55,10 @@
           <h2 class="title"><a class="">月薪两万的人把钱花哪里了</a></h2>
           
           <div class="makedown">
+            <!-- 部分显示 -->
+            <span class="showSpan"></span>
+            <!-- 全部显示 -->
+            <div  class="showDiv"></div>
             月薪两万的人把钱花哪里了
             <a class="showup">显示全部</a>
           </div>
