--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="format-detection" content="telephone=no" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta http-equiv="Cache-Control" content="no-cacle">
+  <meta http-equiv="Cache-Control" content="no-cache">
   <meta http-equiv="pragma" content="no-cache" />
 
   <link rel="stylesheet" type="text/css" href="./stylesheets/normalize.css">
