--- a/index.html
+++ b/index.html
@@ -71,10 +71,12 @@
              </div>
         </li>
       </ul>
+
+      <div class="more" value="更多" >更多</div>
     </div>
 
   </div>
   <script type="text/javascript" src="./js/jquery-3.1.0.min.js"></script>
-  <script type="text/javascript" src="./js/index.js"></script>>
+  <script type="text/javascript" src="./js/index.js"></script>
 </body>
 </html>
