--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
   <div class="container">
     <header>  
       <div class="wrap">
-        <a class="Logo">知乎</a>
+        <a class="Logo"><i class="cnodeLogo"></i></a>
         <div class="search">
           <input type="search" name="" placeholder="搜索你感兴趣的内容...">
           <i class=""></i>
         </div>
-        <button class="" value="提问">提问</button>
+        <button class="" value="搜索">搜索</button>
       </div>
     </header>
 
@@ -37,7 +37,7 @@
       </ul>
       <div class="wrap">
         <div class="news">
-         <span class="newstates">最新动态</span>
+        <span class="newstates"><i class="newsImage"></i>最新动态</span>
          <span class="setting">设置</span>
         </div>
       </div>
