--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="container">
     <header>  
       <div class="wrap">
-        <a class="Logo"><i class="cnodeLogo"></i></a>
+        <a class="Logo" href="#">cnode</a>
         <div class="search">
           <input type="search" name="" placeholder="搜索你感兴趣的内容...">
           <i class=""></i>
