--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta http-equiv="Cache-Control" content="no-cache">
   <meta http-equiv="pragma" content="no-cache" />
 
-  <link rel="stylesheet" type="text/css" href="./stylesheets/normalize.css">
+  <link rel="stylesheet" type="text/css" href="./stylesheets/reset.css">
   <link rel="stylesheet" type="text/css" href="./stylesheets/cnode.css">
 </head>
 <body>
@@ -43,6 +43,7 @@
       </div>
     </nav>
 
+    <div class="spinner"></div>
 
     <div class="article">
       <ul>
