--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>mobile-cnode</title>
+  <title>cnode</title>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
   <meta name="format-detection" content="telephone=no" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <link rel="icon" href="images/cnode_icon.png" type="image/x-icon">
   <!-- <meta http-equiv="Cache-Control" content="no-cache"> -->
   <meta http-equiv="pragma" content="no-cache" />
 
