--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link rel="icon" href="images/cnode_icon.png" type="image/x-icon">
-  <!-- <meta http-equiv="Cache-Control" content="no-cache"> -->
+  <meta http-equiv="Cache-Control" content="no-cache">
   <meta http-equiv="pragma" content="no-cache" />
 
   <link rel="stylesheet" type="text/css" href="./stylesheets/reset.css">
