--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="wrap">
         <div class="news">
         <span class="newstates"><i class="newsImage"></i>最新动态</span>
-         <span class="setting">设置</span>
+        <span class="setting"><i></i>设置</span>
         </div>
       </div>
     </nav>
@@ -70,7 +70,24 @@
             <span>评论</span>
             <span>感谢</span>
             <span>禁止转载</span>
-             </div>
+          </div>
+
+           <div class="comment">
+              <ul>
+                <li>
+                  <span class="comment-name">李观称</span>
+                  <div class="comment-content">不错!!!</div>
+                  <div class="comment-footer">
+                    <span class="comment-time">20天前</span>
+                    <span class="">回复</span>
+                    <span class="">赞</span>
+                    <span class="">举报</span>
+                  </div>
+                </li>
+              </ul>
+              <div class="comment-input"><input type="" name="" placeholder="写下你的评论"></div>
+          </div>
+          
         </li>
       </ul>
 
