--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <div class="article">
       <ul>
         <li class="article-li">
+          
           <div class="header">
             <span class="name">潘安</span>
             <time>10分钟之前</time>
@@ -65,11 +66,12 @@
             月薪两万的人把钱花哪里了
             <a class="showup">显示全部</a>
           </div>
+
           <div class="footer">
-            <span>关注问题</span>
-            <span>评论</span>
-            <span>感谢</span>
-            <span>禁止转载</span>
+            <span class="watch">关注问题</span>
+            <span class="comment">评论</span>
+            <span class="thank">感谢</span>
+            <span class="un">禁止转载</span>
           </div>
 
            <div class="comment">
@@ -85,7 +87,7 @@
                   </div>
                 </li>
               </ul>
-              <div class="comment-input"><input type="" name="" placeholder="写下你的评论"></div>
+            <div class="comment-input"><input type="" name="" placeholder="写下你的评论"></div>
           </div>
           
         </li>
