--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
       </ul>
 
       <div class="more" value="更多" >更多</div>
+
+      <div class="circular">
+        <i class="add"></i>
+        <i class="mul"></i>
+      </div>
     </div>
 
   </div>
